# EQIE_PF

./: .env.example  Cargo.toml  README.md  build.rs  main.py  mock_broker.py  trades.csv
core/: evaluator.py
proto/: rithmic_base.proto
src/: execution_gateway.rs  ingestion.rs  lib.rs  shared_memory.rs
