[package]
name = "eqie_phidias"
version = "0.1.0"
edition = "2021"

[lib]
name = "eqie_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
crossbeam = "0.8.4"
crossbeam-channel = "0.5"
chrono = "0.4.44"
parking_lot = "0.12"
bytes = "1.5"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
prost = "0.12"

[build-dependencies]
prost-build = "0.12"